# nxc-enum

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  nxc_enum.py  outputlog.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sync-to-kali.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
nxc_enum/: __init__.py  __main__.py
nxc_enum/cli/: __init__.py  args.py  main.py
nxc_enum/core/: __init__.py  colors.py  constants.py  output.py  parallel.py  runner.py
nxc_enum/enums/: __init__.py  adcs.py  admin_count.py  asreproast.py  av.py  av_multi.py  bitlocker.py  computers.py  custom_query.py  dc_list.py  delegation.py  descriptions.py  disks.py  dns.py  domain_intel.py  ftp.py  gmsa.py  gpp_password.py  groups.py  interfaces.py  ioxid.py  kerberoastable.py  laps.py  ldap_signing.py  listeners.py  local_groups.py  loggedon.py  loggedon_multi.py  maq.py  mssql.py  nfs.py  os_info.py  policies.py  pre2k.py  printers.py  printers_multi.py  pso.py  pwd_not_required.py  rdp.py  rpc_session.py  (+13 more)
nxc_enum/models/: __init__.py  cache.py  credential.py  multi_target.py  results.py
nxc_enum/parsing/: __init__.py  classify.py  credentials.py  nxc_output.py  shares.py  targets.py
nxc_enum/reporting/: __init__.py  copy_paste.py  multi_summary.py  next_steps.py  share_matrix.py  summary.py  summary_multi.py
nxc_enum/validation/: __init__.py  anonymous.py  hosts.py  multi.py  single.py
tests/: __init__.py  test_filters.py  test_parsing.py  test_security.py  test_validation.py
